# RastQC

./: .gitignore  Cargo.toml  README.md
benchmark/: run_benchmark.sh
paper/: analyze_benchmarks.py  rastqc_paper.md  run_benchmarks.sh
paper/benchmarks/: benchmark_exome_results.tsv  benchmark_results_v2.tsv
src/: config.rs  gui.rs  main.rs  parallel.rs
src/io/: bam.rs  colorspace.rs  fast5.rs  fasta.rs  fastq.rs  mod.rs  pod5.rs
src/modules/: adapter_content.rs  basic_stats.rs  duplication.rs  kmer_content.rs  long_read_quality.rs  mod.rs  n_content.rs  overrepresented.rs  per_base_content.rs  per_base_quality.rs  per_sequence_gc.rs  per_sequence_quality.rs  per_tile_quality.rs  sequence_length.rs
src/report/: mod.rs
tests/: integration_test.rs  test_data.fasta
